--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -362,7 +362,7 @@
             <img class="btn1" src="./src/img/page2/v-btn.jpg" alt="">
             <img class="btn2" src="./src/img/page2/v-btn2.jpg" alt="">
             <div class="user-name">
-              <p><span id="uname"><%= user.name %></span>-<span id="ushi"><%= user.shi %></span></p>
+              <p><span id="uname"><%= user.name %></span>-<span id="ushi">祝福</span></p>
               <!-- <img src="" alt=""> -->
               <p class="waves">
                 <i></i>
