--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -515,8 +515,8 @@
       window.wxshare.config({
         title: '信任接力，成长不孤独',
         desc:  $('#uname').html() + '为山区希望小学的孩子们录了一首“' + $('#ushi').html() +'”，你也来听听吧~',
-        link: 'http://test.wechat2016.com/',
-        imgUrl: 'http://test.wechat2016.com/src/img/share.jpg'
+        link: 'http://hh5.wechat2016.com/',
+        imgUrl: 'http://hh5.wechat2016.com/src/img/share.jpg'
       });
 
     </script>
