--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -420,7 +420,7 @@
 
     <script>
       var voice = {}
-      var u_shi = '祝福'
+      var u_shi = '祝福诗'
       var timer // 计时器
       $('#luyin').on('touchstart', function(event){
         var btn = $(this)
