--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -523,8 +523,8 @@
       window.wxshare.config({
         title: '信任接力，成长不孤独',
         desc:  $('#uname').html() + '为山区希望小学的孩子们录了一首“' + u_shi +'”，你也来听听吧~',
-        link: 'http://hh5.wechat2016.com/',
-        imgUrl: 'http://hh5.wechat2016.com/src/img/share.jpg'
+        link: 'http://mrsix.top/',
+        imgUrl: 'http://mrsix.top/src/img/share.jpg'
       });
 
       // 用户数据上传逻辑
