--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -579,6 +579,7 @@
                 row += '<div class="video-box" data-uid="' + el.useid + '" data-voice="'+ el.voice +'"> \
                   <img class="btn1 local" src="./src/img/page2/v-btn.jpg" alt=""> \
                   <img class="btn2 local" src="./src/img/page2/v-btn2.jpg" alt="">  \
+                  <p>'+ nickname +'</p>\
                   <div class="user-name"> \
                     <p class="waves"> \
                       <i></i> \
@@ -611,6 +612,9 @@
         })
       }
 
+      $(function(){
+        loadservre()
+      })
 
     </script>
   </body>
