--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -577,8 +577,8 @@
               data.forEach(function (el, index) {
                 if (!el.voice)  return
                 row += '<div class="video-box" data-uid="' + el.useid + '" data-voice="'+ el.voice +'"> \
-                  <img class="btn1 local" src="./src/img/page2/v-btn.jpg" alt=""> \
-                  <img class="btn2 local" src="./src/img/page2/v-btn2.jpg" alt="">  \
+                  <img class="btn1" src="./src/img/page2/v-btn.jpg" alt=""> \
+                  <img class="btn2" src="./src/img/page2/v-btn2.jpg" alt="">  \
                   <p>'+ el.nickname +'</p>\
                   <div class="user-name"> \
                     <p class="waves"> \
